--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		</script>
 	</head>
 	<body>
+		<header>Practica con GIT</header>
 		<button onclick="mostraMaterias();">Mostrar Alert de materias</button>
 	</body>
 </html>
